--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
     "start": "node src/server/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "morgan": "^1.10.0",
-    "body-parser": "^1.20.2",
-    "fs-extra": "^11.1.1",
-    "vue": "^3.3.11",
-    "vue-router": "^4.2.5",
     "axios": "^1.6.2",
-    "element-plus": "^2.4.4"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "element-plus": "^2.4.4",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3",
     "@vitejs/plugin-vue": "^4.5.2",
-    "vite": "^5.0.10",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.3",
+    "vite": "^5.0.10"
   }
-} 
+}
