--- a/src/web/package.json
+++ b/src/web/package.json
@@ -12,7 +12,9 @@
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "axios": "^1.6.2",
-    "element-plus": "^2.4.4"
+    "element-plus": "^2.4.4",
+    "multer": "^1.4.5-lts.1",
+    "exceljs": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
